k8s/networkpolicy/random-client.yaml
apiVersion: v1
kind: Pod
metadata:
  name: random-client
  namespace: netpol-demo
  labels:
    app: random-client
    role: random
spec:
  containers:
    - name: curl
      image: curlimages/curl:8.6.0
      command: ["sleep", "36000"]
